--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,15 +15,46 @@
     />
   </head>
   <body>
-    <div class="container text-center board p-3">
+    <div class="container text-center p-3">
       <h1>Tic Tac Toe</h1>
-      <div class="row row-col-6">
-        <div class="col">
-          Player X
+      <div class="container">
+        <div class="row">
+          <div class="col-5">
+            <div class="p-3">
+              <label for="player-one-input">X</label>
+              <input
+                id="player-one-input"
+                type="text"
+                value="Player One"
+                class="text-center form-control player-name"
+              />
+            </div>
+          </div>
+          <div class="col p-3 align-self-end">vs</div>
+          <div class="col-5">
+            <div class="p-3">
+              <label for="player-two-input">O</label>
+              <input
+                id="player-two-input"
+                type="text"
+                value="Player Two"
+                class="text-center form-control player-name"
+              />
+            </div>
+          </div>
         </div>
-        <div class="col">Player O</div>
       </div>
+      <div class="container">
+        <button
+          id="restart"
+          type="button"
+          class="btn btn-block btn-secondary m-2"
+        >
+          Restart game
+        </button>
+        <div id="game-outcome-message"></div>
       </div>
+      <div class="container board text-center p3"></div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
